<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/cadre">
        <LinearLayout
            style="@style/ligne">
            <TextView
                style="@style/textview"
                android:labelFor="@+id/numeroCarteCondition"
                android:text="@string/condition_label" />
            <EditText
                android:id="@+id/numeroCarteCondition"
                style="@style/edittext"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            style="@style/ligne">
            <TextView
                style="@style/textview"
                android:labelFor="@+id/numeroDeCondition"
                android:text="@string/condition_numero" />
            <EditText
                android:id="@+id/numeroDeCondition"
                style="@style/edittext"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            style="@style/ligne">
            <Button
                style="@style/button"
                android:onClick="trouverControleurPourCarteCondition"
                android:text="@string/condition_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/cadre">
        <LinearLayout
            style="@style/ligne">
            <TextView
                style="@style/textview"
                android:labelFor="@+id/numeroDeCarteControle"
                android:text="@string/controle_label" />
            <EditText
                android:id="@+id/numeroDeCarteControle"
                style="@style/edittext"
                android:text="" />
        </LinearLayout>
        <LinearLayout
            style="@style/ligne">
            <Button
                style="@style/button"
                android:onClick="trouverConditionsPourCarteControle"
                android:text="@string/controle_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/cadre">
        <LinearLayout
            style="@style/ligne">
            <Button
                style="@style/button"
                android:onClick="validerConditionEtCarteControle"
                android:text="@string/condition_and_controle_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/cadre">
        <TextView
            android:id="@+id/reponse"
            style="@style/textview"
            android:text="@string/answer" />
    </LinearLayout>
</LinearLayout>